add exclude component logic
